--- a/.env.local
+++ b/.env.local
@@ -5,4 +5,4 @@ SUPABASE_SERVICE_ROLE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
 # Razorpay payment gateway credentials
 RAZORPAY_KEY_ID="rzp_test_RNoSfs9qSw08wG"
 RAZORPAY_KEY_SECRET="LawmQyzlh3n6bpszDakyjuyO"
-NEXT_PUBLIC_RAZORPAY_KEY_ID="your_razorpay_key_id"
+NEXT_PUBLIC_RAZORPAY_KEY_ID="rzp_test_RNoSfs9qSw08wG"
